--- a/asset/index.html
+++ b/asset/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <title>Munky Clicker</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="asset/style.css">
     </head>
     <body>
         <h1 class="text" style="color:#EE5A3B; text-align:center;">Munky Clicker</h1>
