--- a/asset/index.html
+++ b/asset/index.html
@@ -122,7 +122,7 @@
         <div class="footer";>
         <p class = "text";>Brought to you by xReqs_, TrashCan1103, and (CEO of the company) linedhurdle shout out to cchen & Kronzal</p>
         </div>
-        <script src="app.js";></script>
+        <script src="asset/app.js";></script>
 
     </body>
 </html>
