--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </div>
             <div class="hud-right";>
                 <div class="socials">
-                    <button id="discord"></button>
-                    <button id="reddit"></button>
-                    <button id="twitter"></button>
-                    <button id="youtube"></button>
+                    <a href="https://discord.gg/mxQCYpGWKB" id="discord"></a>
+                    <a id="reddit"></a>
+                    <a id="twitter"></a>
+                    <a id="youtube"></a>
                 </div>
                 <div class="upgrades-top"><p>Upgrades</p></div>
                 <div class="upgrades">
