--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="hud-right";>
                 <div class="socials">
                     <a href="https://discord.gg/mxQCYpGWKB" id="discord"></a>
-                    <a id="reddit"></a>
+                    <a href="https://www.reddit.com/r/MunkyClicker/" id="reddit"></a>
                     <a id="twitter"></a>
                     <a id="youtube"></a>
                 </div>
